js scroll to id / test

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,3 +2,19 @@
 
 .h1
 	color: $red
+
+body
+	height: 12000px
+	margin: 0
+	padding: 0
+
+.flex
+	display: flex
+	align-items: flex-start
+	justify-content: center
+	> *
+		display: block
+		margin: 0
+		flex: 1
+		text-transform: none
+		text-decoration: none
