--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,13 +1,13 @@
 @import './_color.sass'
-
+@import './_slider.sass'
 .h1
 	color: $red
 
 body
-	height: 12000px
 	margin: 0
 	padding: 0
-
+	font-family: 'Roboto'
+	font-weight: 100
 .flex
 	display: flex
 	align-items: flex-start
@@ -18,3 +18,7 @@ body
 		flex: 1
 		text-transform: none
 		text-decoration: none
+
+.container
+	padding: 0 20px
+	text-align: center
