--- a/src/sass/_slider.sass
+++ b/src/sass/_slider.sass
@@ -1,2 +1,45 @@
 .slider
 	color: $red
+	background-color: #000
+	position: relative
+	&:hover
+		.slider__slide-overlay
+			opacity: 0
+	&__slide
+		position: relative
+		height: 90vh
+		margin: auto
+		&-overlay
+			position: absolute
+			left: 0
+			top: 0
+			width: 100%
+			height: 100%
+			background-color: rgba(#000, .7)
+			transition: all .3s ease
+			opacity: .55
+	&__slide-image
+		width: 100%
+		height: 100%
+		object-fit: cover
+		display: block
+	&__navigation
+		position: absolute
+		left: 0
+		top: 50%
+		transform: translateY(-50%)
+		width: 100%
+		display: flex
+		justify-content: space-between
+		&-button
+			width: 50px
+			height: 100px
+			color: #ffffff
+			display: flex
+			align-items: center
+			justify-content: center
+			border: none
+			outline: none
+			background-color: rgba(#000, .8)
+			cursor: pointer
+
