--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,7 +1,11 @@
 @import './_color.sass'
 @import './_slider.sass'
 .h1
-	color: $red
+	color: #ffffff
+	padding: 15px 40px
+	background-color: rgba(#000, 0.85)
+	text-align: center
+	text-transform: uppercase
 
 body
 	margin: 0
