--- a/src/templates/slider.twig
+++ b/src/templates/slider.twig
@@ -1,13 +1,25 @@
-<hr>
+<h1 class="h1">JS test slider</h1>
 
-<h1 class="h1">JS test SCROLL</h1>
-<div class="js-slider">
-	<div class="slide">
-		<img class="js-slider-image" src="" alt="">
+<div id="slider1" class="js-slider slider">
+	<div class="slider__slide">
+		<div class="slider__slide-overlay"></div>
+		<img class="slider__slide-image js-slider-image" src="" alt="">
 	</div>
 
-	<div class="slider-buttons flex">
-		<button class="js-prev">prev</button>
-		<button class="js-next">next</button>
+	<div class="slider__navigation">
+		<button class="slider__navigation-button slider__navigation-prev js-prev">prev</button>
+		<button class="slider__navigation-button slider__navigation-next js-next">next</button>
+	</div>
+</div>
+
+<div id="slider2" class="js-slider slider">
+	<div class="slider__slide">
+		<div class="slider__slide-overlay"></div>
+		<img class="slider__slide-image js-slider-image" src="" alt="">
+	</div>
+	
+	<div class="slider__navigation">
+		<button class="slider__navigation-button slider__navigation-prev js-prev">prev</button>
+		<button class="slider__navigation-button slider__navigation-next js-next">next</button>
 	</div>
 </div>
