--- a/src/index.twig
+++ b/src/index.twig
@@ -11,6 +11,9 @@
 	{% block content %}
 		<div class="container">
 			<h1>Main Page</h1>
+			<div class="time-block"></div>
+			<div id="t">5</div>
+			<button id="clicker-btn">CLICK</button>
 			<hr>
 			{% include "./templates/scroll.twig" %}
 			{% include "./templates/slider.twig" %}
