--- a/src/templates/slider.twig
+++ b/src/templates/slider.twig
@@ -10,6 +10,8 @@
 		<button class="slider__navigation-button slider__navigation-prev js-prev">prev</button>
 		<button class="slider__navigation-button slider__navigation-next js-next">next</button>
 	</div>
+
+	<ul class="slider__dots"></ul>
 </div>
 
 <div id="slider2" class="js-slider slider">
@@ -22,4 +24,6 @@
 		<button class="slider__navigation-button slider__navigation-prev js-prev">prev</button>
 		<button class="slider__navigation-button slider__navigation-next js-next">next</button>
 	</div>
+
+	<ul class="slider__dots"></ul>
 </div>
